class component,get data from server create Users class component, getting data to render friends(users) from server

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -14,3 +14,11 @@
   display: flex;
   justify-content: space-between;
 }
+.page{
+  cursor: pointer;
+  padding: 5px;
+}
+.activePage{
+  font-weight: bold;
+
+}
