--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,14 @@
 .header {
   background: green;
+  min-height: 100px;
+  margin: 10px;
 }
-img {
+.img img{
   width: 80px;
+}
+.auth, .auth a{
+  color: white;
+  float: right;
+  margin: 10px;
+  font-size: 22px;
 }
