--- a/src/components/Profile/InfoProfile/InfoProfile.module.css
+++ b/src/components/Profile/InfoProfile/InfoProfile.module.css
@@ -2,4 +2,14 @@
   width: 100%;
   height: 200px;
 }
-
+.userProfile{
+  margin: 15px;
+  color: white;
+}
+.photo img {
+  width: 200px;
+}
+.desc input{
+  margin: 10px;
+  color: blue;
+}
